package main;

public interface Initializable {
    public abstract void initialize();
}
