package main;

public interface Playable {
    public abstract void play();
}
