package main;

public interface Printable {
    public abstract void print();
}
