package main;

import main.game.*;

public interface Usable {
    public abstract void use(Player player);
}
