package main.game;

public abstract class ItemFactory {
    public abstract Item getItem(String itemName);
}
