package main.game;

public class TimeMinusItem extends TimeItem {
    public TimeMinusItem() {
        super(-1000);
    }
}
