package main.game;

public class TimePlusItem extends TimeItem {
    public TimePlusItem() {
        super(1000);
    }
}
